@@ -34,6 +34,7 @@ import static org.mockito.Mockito.when;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.OutputStream;
+import java.net.URI;
 import java.net.URL;
 import java.util.List;
 
@@ -57,10 +58,10 @@ import org.dspace.qaevent.service.QAEventService;
 import org.dspace.qaevent.service.impl.OpenaireClientFactoryImpl;
 import org.dspace.services.ConfigurationService;
 import org.dspace.utils.DSpace;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Ignore;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 
 /**
  * Integration tests for {@link OpenaireEventsImport}.
@@ -83,7 +84,7 @@ public class OpenaireEventsImportIT extends AbstractIntegrationTestWithDatabase 
 
     private ConfigurationService configurationService = new DSpace().getConfigurationService();
 
-    @Before
+    @BeforeEach
     public void setup() {
 
         context.turnOffAuthorisationSystem();
@@ -105,7 +106,7 @@ public class OpenaireEventsImportIT extends AbstractIntegrationTestWithDatabase 
         ((OpenaireClientFactoryImpl) OpenaireClientFactory.getInstance()).setBrokerClient(mockBrokerClient);
     }
 
-    @After
+    @AfterEach
     public void after() {
         ((OpenaireClientFactoryImpl) OpenaireClientFactory.getInstance()).setBrokerClient(brokerClient);
     }
@@ -322,7 +323,7 @@ public class OpenaireEventsImportIT extends AbstractIntegrationTestWithDatabase 
 
         context.restoreAuthSystemState();
 
-        URL openaireURL = new URL("http://api.openaire.eu/broker");
+        URL openaireURL = URI.create("http://api.openaire.eu/broker").toURL();
 
         when(mockBrokerClient.listSubscriptions(openaireURL, "user@test.com")).thenReturn(of("sub1", "sub2", "sub3"));
 
@@ -393,7 +394,7 @@ public class OpenaireEventsImportIT extends AbstractIntegrationTestWithDatabase 
     @Test
     public void testImportFromOpenaireBrokerWithErrorDuringListSubscription() throws Exception {
 
-        URL openaireURL = new URL("http://api.openaire.eu/broker");
+        URL openaireURL = URI.create("http://api.openaire.eu/broker").toURL();
 
         when(mockBrokerClient.listSubscriptions(openaireURL, "user@test.com"))
             .thenThrow(new RuntimeException("Connection refused"));
@@ -429,7 +430,7 @@ public class OpenaireEventsImportIT extends AbstractIntegrationTestWithDatabase 
 
         context.restoreAuthSystemState();
 
-        URL openaireURL = new URL("http://api.openaire.eu/broker");
+        URL openaireURL = URI.create("http://api.openaire.eu/broker").toURL();
 
         when(mockBrokerClient.listSubscriptions(openaireURL, "user@test.com")).thenReturn(of("sub1", "sub2", "sub3"));
 
@@ -486,7 +487,7 @@ public class OpenaireEventsImportIT extends AbstractIntegrationTestWithDatabase 
      * which must be tested via LDNMessage at DNInboxControllerIT
     */
     @Test
-    @Ignore
+    @Disabled
     public void testImportFromFileEventMoreReview() throws Exception {
 
         context.turnOffAuthorisationSystem();
